@@ -3,6 +3,8 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- show IPv4 gateway on Status: Interfaces page (was removed inadvertently)
+
 - fixed bug with IPv6 subnets in firewall rules
 
 - added device msk to kernel configuration
